hetzner/k8s-resources/http-echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
  namespace: default
spec:
  replicas: 5
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: hashicorp/http-echo:latest
          args:
            - "-text=Hello from http-echo!"
          ports:
            - containerPort: 5678
