hetzner/k8s-resources/http-echo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: default
spec:
  selector:
    app: http-echo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
